# django-project-satvaspace

./: .editorconfig  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
django_project/: .env.example  Dockerfile  pyproject.toml
django_project/content/admin/: __init__.py  audio_admin.py  (+2 more)
django_project/decision/: apps.py  tasks.py  urls.py
django_project/django_project/: celery.py  settings.py
project/: Dockerfile  entrypoint.sh  pyproject.toml  pytest.ini
project/content/: apps.py  urls.py
project/content/admin/: __init__.py  audio_admin.py  content_admin.py  text_admin.py  video_admin.py
project/content/factory/: audio_factories.py  content_factories.py  text_factories.py  video_factories.py
project/content/migrations/: 0001_initial.py
project/content/models/: __init__.py  audio.py  base.py  content.py  text.py  video.py
project/content/serializer/: __init__.py  content_serializer.py  text_serializer.py  video_serializer.py
project/decision/: tasks.py  urls.py
project/decision/admin/: page_admin.py
project/decision/factory/: page_factories.py
project/decision/migrations/: 0001_initial.py  0002_create_demo_data.py
project/decision/models/: page.py
project/decision/serializer/: page_serializer.py
project/decision/service/: __init__.py  content_service.py
project/decision/test/: test_details_pages.py  test_list_pages.py
project/decision/viewset/: page_viewset.py
project/django_project/: urls.py
project/django_project/settings/: __init__.py  base.py  celery_setting.py  development.py
readme/: task.md
(+20 files in other folders)
