[tool.poetry]
name = "django_project_satvaspace"
version = "0.1.0"
description = ""
authors = ["odi1n <sashf1999@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
